kubernetes/darkmore/auth-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy
spec:
  selector:
    app: auth-proxy
  type: ClusterIP
  ports:
  - name: auth-proxy
    protocol: TCP
    port: 3000
    targetPort: 3000
---
