kubernetes/darkmore/auth-proxy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: red-proxy
spec:
  parentRefs:
  - name: gateway-public
    namespace: kgateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
    - auth-proxy.ramona.fun
    - red-docs.ramona.fun
    # TODO make this available only on an internal domain?
    - admin-secret.ramona.fun
  rules:
    - backendRefs:
      - name: auth-proxy
        kind: Service
        port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
