kubernetes/darkmore/auth-proxy/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: auth-proxy-mtls
spec:
  parentRefs:
  - name: tls-passthrough
    namespace: kgateway-system
    group: gateway.networking.k8s.io
    kind: ListenerSet
  hostnames:
    - ras.ramona.fun
  rules:
    - backendRefs:
      - name: auth-proxy
        kind: Service
        port: 3001
